# cube-sdl

./: CMakeLists.txt  README.md
include/: gmath.h
src/: gmath.cc  main.cc
